[project]
name = "sdr-agent-langgraph"
version = "0.1.0"
description = "SDR agent de qualificação B2B em LangGraph — referência de produção sanitizada"
authors = [{name = "Valter Silva"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
sdr = "sdr_agent_langgraph.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
